오류 수정 완

--- a/app/src/main/res/menu/popup.xml
+++ b/app/src/main/res/menu/popup.xml
@@ -3,8 +3,8 @@
 
     <item
         android:id="@+id/pluscheck"
-        android:title="search" />
+        android:title="STEP" />
     <item
         android:id="@+id/plusmemo"
-        android:title="add" />
+        android:title="MEMO" />
 </menu>
