--- a/app/src/main/res/layout/activity_checklist.xml
+++ b/app/src/main/res/layout/activity_checklist.xml
@@ -79,7 +79,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="@drawable/customcheck"
-                android:button="#00"
+                android:button="@null"
                 android:onClick="onCheckBoxClicked"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -99,7 +99,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/customcheck"
-            android:button="#00"
+            android:button="@null"
             android:onClick="onCheckBoxClicked"
             />
         <TextView
@@ -120,7 +120,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/customcheck"
-            android:button="#00"
+            android:button="@null"
             android:onClick="onCheckBoxClicked"
             />
         <TextView
@@ -141,7 +141,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/customcheck"
-            android:button="#00"
+            android:button="@null"
             android:onClick="onCheckBoxClicked"
             />
         <TextView
@@ -162,7 +162,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/customcheck"
-            android:button="#00"
+            android:button="@null"
             android:onClick="onCheckBoxClicked"
             />
         <TextView
@@ -183,7 +183,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/customcheck"
-            android:button="#00"
+            android:button="@null"
             android:onClick="onCheckBoxClicked"
             />
         <TextView
