--- a/app/src/main/res/layout/activity_memo.xml
+++ b/app/src/main/res/layout/activity_memo.xml
@@ -33,11 +33,11 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="10dp"
-                android:background="#00ff000"
+                android:background="@null"
                 android:text="저장"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:backgroundTint="#00ff00"
+                android:backgroundTint="#0000"
                 />
         </LinearLayout>
     </LinearLayout>
@@ -75,5 +75,5 @@
         android:text="내용을 입력하세요"
         android:textSize="14sp"
         android:scrollHorizontally="false"
-        android:background="#00ff000"/>
+        android:background="@null"/>
 </LinearLayout>
