--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,14 +17,6 @@
         android:background="#4FEBE1"
         >
 
-        <ImageButton
-            android:id="@+id/notibtn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="10dp"
-            android:backgroundTint="#00FFFFFF"
-            android:src="@drawable/noticon" />
-
         <TextView
             android:id="@+id/toptext"
             android:layout_width="wrap_content"
@@ -36,13 +28,15 @@
             android:layout_marginHorizontal="110dp"/>
 
 
-        <ImageButton
-            android:id="@+id/searbtn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="5dp"
+        <Switch
+            android:id="@+id/notibtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
             android:backgroundTint="#00FFFFFF"
-            android:src="@drawable/searicon"/>
+            android:text="알림"
+            android:textColor="#FFFFFF"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
